# rusty-medidor

./: .dockerignore  .gitignore  .medidor.env.dist  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: app.rs  main.rs
src/app/: mailer.rs  metrics.rs  report.rs
src/templates/: report.hbs
