[package]
name = "medidor"
version = "0.1.0"
authors = ["Ruslan Karimov <rk@4xxi.com>"]
edition = "2018"

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
mysql = "*"
handlebars = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
env_logger = "*"
log = "*"
native-tls = "0.2.3"